Most up to date version

--- a/assets/game/lang/en.json
+++ b/assets/game/lang/en.json
@@ -54,7 +54,7 @@
 	"trait-erroneousaim": "<font color=\"#ff8484\">• Erroneous Aim </font>",
 	"trait-artisan": "<font color=\"#84ff84\">• Artisan </font>",
 	"trait-frugalforming": "<font color=\"#84ff84\">• Frugal Forming </font>",
-	"trait-scavenger": "<font color=\"#84ff84\">• Scavenger </font>",
+	"trait-keeneye": "<font color=\"#84ff84\">• Keen Eye </font>",
 	"trait-squeamish": "<font color=\"#ff8484\">• Squeamish </font>",
 	"trait-soldierblessed": "<font color=\"#84ff84\">• Soldier </font>",
 	"trait-hardyblessed": "<font color=\"#84ff84\">• Hardy </font>",
@@ -101,6 +101,7 @@
 	"trait-bellshocked": "<font color=\"#ff8484\">• Bellshocked </font>",
 	"trait-smith": "<font color=\"#84ff84\">• Smith </font>",
 	"trait-dragonskin": "<font color=\"#84ff84\">• Dragonskin </font>",
+	"trait-resistant": "<font color=\"#84ff84\">• Resistant </font>",
 	"trait-recycler": "<font color=\"#84ff84\">• Recycler </font>",
 	"trait-burner": "<font color=\"#84ff84\">• Burner </font>",
 	"trait-tallowtanner": "<font color=\"#84ff84\">• Tallow Tanner </font>",
@@ -130,7 +131,7 @@
 	"traitname-erroneousaim": "Erroneous Aim",
 	"traitname-artisan": "Artisan",
 	"traitname-frugalforming": "Frugal Forming",
-	"traitname-scavenger": "Scavenger",
+	"traitname-keeneye": "Scavenger",
 	"traitname-squeamish": "Squeamish",
 	"traitname-soldierblessed": "Soldier",
 	"traitname-hardyblessed": "Hardy",
@@ -179,6 +180,7 @@
 	"traitname-unlikelyharvest": "Unlikely Harvest",
 	"traitname-fibrousfolly": "Fibrous Folly",
 	"traitname-logger": "Logger",
+	"traitname-resistant": "Resistant",
 	
 	"traitdesc-artisan": "Exclusive craftable <a href=\"handbooksearch://wallpaper\">wallpapers</a>, and can glaze <a href=\"handbooksearch://Raw storage vessel\">Raw storage vessels</a>, <a href=\"handbooksearch://Raw flowerpot\">Raw flowerpots</a>, <a href=\"handbooksearch://Raw planter\">Raw planters</a>, and cheaper recipes for <a href=\"handbooksearch://red clay or blue clay or fire clay\">clay</a>. Can also craft <a href=\"handbooksearch://refurbished\">Refurbished crocks</a>",
 	"traitdesc-bowyer": "Exclusive craftable <a href=\"handbooksearch://crude bow or crude arrow or recurve bow \">bows and arrows</a>, and <a href=\"handbooksearch://quiver\">a quiver</a>",
@@ -212,7 +214,6 @@
 	"charattribute-cropDropRate-0.75": "+75% extra crops on harvest",
 	"charattribute-wildCropDropRate-0.35": "+35% wild crop drop rate",
 	"charattribute-wildCropDropRate-0.5": "+50% wild crop drop rate",
-	"charattribute-wildCropDropRate-0.75": "+75% wild crop drop rate",
 	"charattribute-wildCropDropRate-0.75": "+75% wild crop drop rate",
 	"charattribute-wildCropDropRate--0.3": "-30% wild crop drop rate",
 	"charattribute-wildCropDropRate--0.5": "-50% wild crop drop rate",
@@ -262,7 +263,6 @@
 	"charattribute-walkspeed-0.75": "+75% walk speed",
 	"charattribute-walkspeed-0.35": "+35% walk speed",
 	"charattribute-walkspeed--0.15": "-15% walk speed",
-	"charattribute-walkspeed-0.75": "+75% walk speed",
 	"charattribute-jumpHeightMul-1": "+100% jump height",
 	"charattribute-armorWalkSpeedAffectedness--0.3": "walk speed penalty for wearing armor reduced by 30%",
 	"charattribute-armorWalkSpeedAffectedness--0.6": "walk speed penalty for wearing armor reduced by 60%",
@@ -274,6 +274,9 @@
 	"charattribute-meleeWeaponsDamage--0.15": "-15% melee damage",
 	"charattribute-meleeWeaponsDamage--0.3": "-30% melee damage",
 	"charattribute-meleeWeaponsDamage--0.2": "-20% melee damage",
+	"charattribute-slashingDamageFactor--0.3": "+30% slash damage resistance",
+	"charattribute-piercingDamageFactor--0.3": "+30% pierce damage resistance",
+	"charattribute-bluntDamageFactor--0.3": "+30% blunt damage resistance",
 	"charattribute-rangedWeaponsDamage-1.7": "+170% ranged damage",
 	"charattribute-rangedWeaponsDamage-1.25": "+125% ranged damage",
 	"charattribute-rangedWeaponsDamage-0.75": "+75% ranged damage",
