--- a/assets/game/lang/en.json
+++ b/assets/game/lang/en.json
@@ -194,7 +194,7 @@
 	"traitdesc-slow": "You are weighed down, either by sins or loot.",
 	"traitdesc-silvertongue": "Cheaper prices for every trader",
 	"traitdesc-masquemonger": "Each mask holds a story... some happy, some sad. All of them worth wearing; at least once. (able to craft all masks in the game)",
-	"traitdesc-shelteredstone": "No temporal stability loss whilst underground, no matter how deep.",
+	"traitdesc-shelteredstone": "No temporal stability loss whilst underground, no matter how deep. Also allows the crafting of mining lanterns and the Miner's Pack.",
 	"traitdesc-recycler": "Can break down <a href=\"handbooksearch://rusty gear\">rusty gears</a>, <a href=\"handbooksearch://metal scraps\">metal scraps</a>, and <a href=\"handbooksearch://metal parts\">metal parts</a> for metals of that type",
 	"traitdesc-tallowtanner": "Can recycle unused pelts into <a href=\"handbooksearch://scraped hide\">scraped hides</a>",
 	"traitdesc-smith": "Placeholder",
