Moved some traits around and changed some values. Disabled Lords of the Clay and Nature because they were merged with other classes until i can make them more unique.

--- a/assets/game/lang/en.json
+++ b/assets/game/lang/en.json
@@ -219,6 +219,7 @@
 	"charattribute-forageDropRate-0.5": "+50% loot from foraging",
 	"charattribute-forageDropRate-0.55": "+55% loot from foraging",
 	"charattribute-forageDropRate-0.75": "+75% loot from foraging",
+	"charattribute-forageDropRate-0.25": "+25% loot from foraging",
 	"charattribute-forageDropRate-1.25": "+125% loot from foraging",
 	"charattribute-forageDropRate-1.75": "+175% loot from foraging",
 	"charattribute-forageDropRate--0.3": "-30% loot from foraging",
@@ -275,6 +276,9 @@
 	"charattribute-slashingDamageFactor--0.3": "+30% slash damage resistance",
 	"charattribute-piercingDamageFactor--0.3": "+30% pierce damage resistance",
 	"charattribute-bluntDamageFactor--0.3": "+30% blunt damage resistance",
+	"charattribute-slashingDamageFactor--0.2": "+20% slash damage resistance",
+	"charattribute-piercingDamageFactor--0.2": "+20% pierce damage resistance",
+	"charattribute-bluntDamageFactor--0.2": "+20% blunt damage resistance",
 	"charattribute-rangedWeaponsDamage-1.7": "+170% ranged damage",
 	"charattribute-rangedWeaponsDamage-1.25": "+125% ranged damage",
 	"charattribute-rangedWeaponsDamage-0.75": "+75% ranged damage",
